# SiNAPSE

./: pyproject.toml
src/SiNAPSE/core/: __init__.py  load.py  sort.py  spikes.py
src/SiNAPSE/experiment/: probes.json
src/SiNAPSE/workers/: auditory_labeling.py  sort_data.py
test files/: test.ipynb  test.py
